syntax = "proto3";
package pb;

// TODO: move it to core

option go_package = "github.com/amin1024/xtelbot/pb";

service XNodeGrpc {
  rpc AddUser(AddUserCmd) returns (Response);
  rpc Ping(Empty) returns (Empty);
  rpc GetSub(UserInfoReq) returns (SubContent);
  rpc GetUserInfo(UserInfoReq) returns (UserInfo);
}

message AddUserCmd {
  uint64 Tid = 1;
  string TUsername = 2;
  string uuid = 3;
  float TrafficAllowed = 4;
  string ExpireAt = 5;
  int64 PackageDays = 6;
  string Mode = 7;
}

message Response {
  string msg = 1;
}

message Empty {}

// --------------------------------------------------

message UserInfoReq {
  uint64 tid = 1;
  string tUsername = 2;
  string uuid = 3;
}

message SubContent {
  string Content = 1;
}

message UserInfo {
  string Uuid = 1;
  string Name = 2;
  string LastOnline = 3;
  float UsageLimit = 4;
  float CurrentUsage = 5;
}